--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>Welcome to my first GitHub page!</h1>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TenaciousPics</title>
+</head>
+<body>
+    <h1>TenaciousPics</h1>
+    <h2>Great photos. Every single time.</h2>
+    <p>Thanks to the latest technlogies, TenaciousPics will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
+<ul>
+    <li>Home</li>
+    <li>Get started</li>
+    <li>How it works</li>
+    <li>Testimonials</li>
+    <li>About us</li>
+</ul>
+</body>
+</html>
