--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>TenaciousPics</h1>
     <h2>Great photos. Every single time.</h2>
+
     <p>Thanks to the latest technlogies, TenaciousPics will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
 <ul>
     <li>Home</li>
@@ -16,5 +17,6 @@
     <li>Testimonials</li>
     <li>About us</li>
 </ul>
+    <p>Try it for 7 days for free.</p>
 </body>
 </html>
