added style file

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     <li>About us</li>
 </ul>
     <p>Try it for 7 days for free.</p>
+
+<ul>
+    <li>FAQ</li>
+    <li>Contact us</li>
+    <li>Terms of Service</li>
+</ul>
 </body>
 </html>
