--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <title>TenaciousPics</title>
+    <title>PrismVision</title>
 </head>
 <body>
-    <h1>TenaciousPics</h1>
+    <h1>PrismVision</h1>
     <h2>Great photos. Every single time.</h2>
 
-    <p>Thanks to the latest technlogies, TenaciousPics will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
+    <p>Thanks to the latest technlogies, PrismVision will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
 <ul>
     <li>Home</li>
     <li>Get started</li>
