--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
     <p>Thanks to the latest technlogies, PrismVision will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
 <ul>
-    <li>Home</li>
-    <li>Get started</li>
-    <li>How it works</li>
-    <li>Testimonials</li>
-    <li>About us</li>
+    <li><button>Home</button></li>
+    <li><button>Get started</button></li>
+    <li><button>How it works</button></li>
+    <li><button>Testimonials</button></li>
+    <li><button>About us</button></li>
 </ul>
     <p>Try it for 7 days for free.</p>
 
 <ul>
-    <li>FAQ</li>
-    <li>Contact us</li>
-    <li>Terms of Service</li>
+    <li><button>FAQ</button></li>
+    <li><button>Contact us</button></li>
+    <li><button>Terms of Service</button></li>
 </ul>
 </body>
 </html>
