--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <h2>Great photos. Every single time.</h2>
 
     <p>Thanks to the latest technlogies, PrismVision will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
-<ul>
-    <li><button>Home</button></li>
-    <li><button>Get started</button></li>
-    <li><button>How it works</button></li>
-    <li><button>Testimonials</button></li>
-    <li><button>About us</button></li>
-</ul>
-    <p>Try it for 7 days for free.</p>
+<div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#getstarted">Get started</a>
+        <a href="#howitworks">How it works</a>
+        <a href="testimonials">Testimonials</a>
+        <a href="about">About us</a>
+    </div>
+
+<p>Try it for 7 days for free.</p>
 
 <ul>
     <li><button>FAQ</button></li>
