added html pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <title>Get Started - TenaciousPics</title>
+    <title>About us - TenaciousPics</title>
 </head>
 <body>
     <div class="topnav">
@@ -14,7 +14,7 @@
         <a href="testimonials">Testimonials</a>
         <a href="about">About us</a>
     </div>
-<h1>Get Started</h1>
+<h1>About us</h1>
 <br>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo quod enim tenetur facilis. Fuga quae sint laborum minima ipsa necessitatibus possimus, maxime incidunt quos reiciendis magni fugiat accusantium. Necessitatibus, iste.</p>
 </body>
