--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
         <a href="testimonials">Testimonials</a>
         <a href="about">About us</a>
     </div>
+<div class="overlay-image"><a href="LINK_URL">
+    <img class="image" src="IMAGE" alt="Alt text" />
+        <div class="text">Image + text
+          NO HOVER</div>
+      </a></div>
 <h1>PrismVision</h1>
 <h2>Great photos. Every single time.</h2>
+<br>
+<img
 <br>
 <p>Thanks to the latest technlogies, PrismVision will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
 <br>
