--- a/index.html
+++ b/index.html
@@ -13,25 +13,22 @@
         <a href="#howitworks">How it works</a>
         <a href="testimonials">Testimonials</a>
         <a href="about">About us</a>
-    </div>
-<div class="overlay-image"><a href="LINK_URL">
-    <img class="image" src="IMAGE" alt="Alt text" />
-        <div class="text">Image + text
-          NO HOVER</div>
-      </a></div>
+</div>
+<div class="banner">
+    <img src="alif-ngoylung-jg-6ARMiaPM-unsplash-2.jpg" alt="PrismVision" class="center"></div>
+<br>
+<div class="banner-text">
+    
 <h1>PrismVision</h1>
 <h2>Great photos. Every single time.</h2>
-<br>
-<img
 <br>
 <p>Thanks to the latest technlogies, PrismVision will allow you to take your photos to their maximum potential. Without spending hours on them.</p>
 <br>
 <p>Try it for 7 days for free.</p>
-
 <ul>
-    <li><button>FAQ</button></li>
-    <li><button>Contact us</button></li>
-    <li><button>Terms of Service</button></li>
+    <li>FAQ</li>
+    <li>Contact us</li>
+    <li>Terms of Service</li>
 </ul>
 </body>
 </html>
